# Stagehand

./: .clang-format  .gitignore  Makefile.am  configure.ac
include/: bot_config.hpp
include/commands/: base.hpp  command_list.hpp
include/utils/: typemap.hpp
src/: bot_config.cpp  main.cpp
src/commands/: shutdown.cpp
